<resources>
  <string name="app_name">AndroidMediaPractice</string>

  <!-- Task 1  -->
  <string name="task1_title">Task1</string>
  <string name="launcher_logo_content_description">Launcher Logo</string>
  <string name="image_view">ImageView</string>
  <string name="surface_view">SurfaceView</string>
  <string name="custom_view">CustomView</string>

  <!-- Task 2 -->
  <string name="task2_title">Task2</string>
  <string name="audio_start_record">Start Record Audio</string>
  <string name="audio_stop_record">Stop Record Audio</string>
  <string name="audio_start_play">Start Play Audio</string>
  <string name="audio_stop_play">Stop Play Audio</string>
  <string name="save_to_wav">Save to WAV File</string>
  <string name="play_from_wav">Play from WAV File</string>
  <string name="encode_to_mp3">Encode to MP3</string>

  <!-- Task 3 -->
  <string name="task3_title">Task3</string>
  <string name="record_video">Record Video</string>
  <string name="preview_video_surface_view">Preview Video Surface View</string>
  <string name="preview_video_texture_view">Preview Video Texture View</string>
  <string name="nv21_callback">NV21 Data Callback</string>
  <string name="capture">Capture</string>

  <!-- Task 4 -->
  <string name="task4_title">Task4</string>
  <string name="media_extractor">Media Extractor</string>
  <string name="media_muxer">Media Muxer</string>

  <!-- Task 7 -->
  <string name="task7_title">Task 7</string>
  <string name="encode_aac">Encode To AAC</string>
  <string name="decode_aac">Decode AAC</string>

  <!-- Task 8 -->
  <string name="task8_title">Task 8</string>
  <string name="task8_notice">Must Run Task3 Capture Activity First to generate YUV file</string>
  <string name="encode_h264">Encode to H.264</string>
  <string name="decode_h264">Decode H.264</string>

  <!-- Task 9 -->
  <string name="task9_title">Task 9</string>

</resources>
