<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical">

  <androidx.appcompat.widget.Toolbar
    style="@style/AppTheme.Toolbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:title="@string/task4_title" />

  <Button
    android:id="@+id/mediaExtractorBtn"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/media_extractor" />

  <Button
    android:id="@+id/mediaMuxerBtn"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/media_muxer" />

</LinearLayout>